--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "**/data/**": true,
         "**/model/**": true,
         "**/output/**": true
-    }
+    },
+    "python.pythonPath": "/home/kaiida/anaconda3/envs/py38/bin/python"
 }
