--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "voice100"
 version = "1.3.2"
 description = "Voice100 is a small TTS for English and Japanese."
 authors = ["Katsuya Iida <katsuya.iida@gmail.com>"]
-license = "mit"
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -11,6 +11,10 @@ python = "^3.7"
 torch = "^1.13.1"
 torchaudio = "^0.13.0"
 pytorch_lightning = ">=1.4.0"
+fugashi = {extras = ["lang-ja"], version = "^1.2.1"}
+unidic-lite = {extras = ["lang-ja"], version = "^1.0.8"}
+pyworld = {extras = ["tts"], version = "^0.3.2"}
+g2p-en = {extras = ["lang-en-phone"], version = "^2.1.0"}
 
 [build-system]
 requires = ["poetry-core"]
