--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ g2p-en = {extras = ["lang-en-phone"], version = "^2.1.0"}
 [tool.poetry.group.test.dependencies]
 pytest = "^6.0.0"
 flake8 = "^6.0.0"
+soundfile = "^0.11.0"
+onnxruntime = "^1.13.1"
 
 [build-system]
 requires = ["poetry-core"]
