--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        apt update
-        apt install -y libsndfile1
+        sudo apt update
+        sudo apt install -y libsndfile1
         python -m pip install --upgrade pip
         python -m pip install poetry
         poetry install
