--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,17 +20,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install poetry
+      run: pipx install poetry
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'poetry'
     - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y libsndfile1
-        python -m pip install --upgrade pip
-        python -m pip install poetry
-        poetry install
+    - run: poetry install
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
