--- a/config/ttsaudio_ja_phone_lstm_base.yaml
+++ b/config/ttsaudio_ja_phone_lstm_base.yaml
@@ -1,8 +1,7 @@
-seed_everything: true
 trainer:
   gradient_clip_val: 1.0
 model:
-  class_path: voice100.models.tts.AlignTextToAudioModel
+  class_path: voice100.models.AlignTextToAudio
   init_args:
     vocab_size: 44
     logspc_size: 257
@@ -12,9 +11,7 @@ model:
     decoder_settings: 
       - [1024, false, 5, 1, 2, false]
       - [1024, true, 5, 2, 2, false]
-      - [512, false, 5, 1, 2, false]
-      - [512, false, 5, 1, 2, false]
-      - [512, false, 5, 1, 2, false]
+      - [1024, false, 5, 1, 2, false]
     learning_rate: 1e-3
     hasf0_size: 1
     f0_size: 1
@@ -22,7 +19,7 @@ data:
   class_path: voice100.data_modules.AudioTextDataModule
   init_args:
     vocoder: world
-    dataset: kokoro_tiny
+    dataset: kokoro_large
     sample_rate: 16000
     language: ja
     use_align: true
@@ -30,6 +27,4 @@ data:
     use_target: false
     cache: ./cache
     batch_size: 128
-    num_workers: 0
     valid_ratio: 0.1
-ckpt_path: null
