--- a/config/ttsaudio_ja_phone_lstm_base.yaml
+++ b/config/ttsaudio_ja_phone_lstm_base.yaml
@@ -1,5 +1,12 @@
+seed_everything: 1234
 trainer:
   gradient_clip_val: 1.0
+  callbacks:
+    - class_path: pytorch_lightning.callbacks.ModelCheckpoint
+      init_args:
+        monitor: "train_loss"
+        save_last: true
+        every_n_epochs: 10
 model:
   class_path: voice100.models.AlignTextToAudio
   init_args:
