--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,13 @@ voice100-align-text = "voice100.align_text:cli_main"
 voice100-calc-stat = "voice100.calc_stat:cli_main"
 voice100-cache-dataset = "voice100.cache_dataset:cli_main"
 voice100-convert-phone = "voice100.convert_phone:cli_main"
+voice100-export-onnx-v1 = "voice100.export_onnx_v1:cli_main"
 voice100-export-onnx = "voice100.export_onnx:cli_main"
 voice100-train-align = "voice100.train_align:cli_main"
 voice100-train-asr = "voice100.train_asr:cli_main"
 voice100-train-ttsalign = "voice100.train_ttsalign:cli_main"
 voice100-train-ttsaudio = "voice100.train_ttsaudio:cli_main"
-voice100-train-ttsaudio-ms = "voice100.train_ttsaudio_ms:cli_main"
+voice100-train-ttsaudio-v2 = "voice100.train_ttsaudio_v2:cli_main"
 voice100-train-ttsaudio-mt = "voice100.train_ttsaudio_mt:cli_main"
 
 [tool.poetry.dependencies]
