Rename `voice100-convert-phone` command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ voice100 = "voice100.main:cli_main"
 voice100-align-text = "voice100.align_text:cli_main"
 voice100-calc-stat = "voice100.calc_stat:cli_main"
 voice100-cache-dataset = "voice100.cache_dataset:cli_main"
-voice100-convert-phone = "voice100.convert_phone:cli_main"
+voice100-prepare-dataset = "voice100.prepare_dataset:cli_main"
 voice100-export-onnx-v1 = "voice100.export_onnx_v1:cli_main"
 voice100-export-onnx = "voice100.export_onnx:cli_main"
 voice100-train-align = "voice100.train_align:cli_main"
