--- a/config/asr_en_small.yaml
+++ b/config/asr_en_small.yaml
@@ -27,5 +27,5 @@ data:
     language: en
     sample_rate: 16000
     use_align: false
-    use_phone: true
+    use_phone: false
     batch_size: 128
