--- a/config/asr_en_base.yaml
+++ b/config/asr_en_base.yaml
@@ -14,10 +14,10 @@ model:
     vocab_size: 29
     audio_size: 64
     encoder_settings:
-      - [512, false, 5, 1, 2, False]
-      - [512, false, 5, 2, 2, False]
-      - [512, false, 5, 1, 2, False]
-      - [512, false, 5, 1, 2, False]
+      - [512, false, 5, 1, 2, false]
+      - [512, false, 5, 2, 2, false]
+      - [512, false, 5, 1, 2, false]
+      - [512, false, 5, 1, 2, false]
     decoder_num_layers: 2
     decoder_hidden_size: 512
     learning_rate: 1e-3
