--- a/config/asr_en_base.yaml
+++ b/config/asr_en_base.yaml
@@ -1,7 +1,7 @@
 seed_everything: 1234
 trainer:
-  max_epochs: 100
-  gradient_clip_val: 1.0
+  max_epochs: 150
+  gradient_clip_val: 0.5
   callbacks:
     - class_path: pytorch_lightning.callbacks.ModelCheckpoint
       init_args:
@@ -23,7 +23,7 @@ data:
   class_path: voice100.data_modules.AudioTextDataModule
   init_args:
     vocoder: mel
-    dataset: ljspeech,librispeech
+    dataset: librispeech
     language: en
     sample_rate: 16000
     use_align: false
