--- a/config/align_en_phone_base.yaml
+++ b/config/align_en_phone_base.yaml
@@ -1,5 +1,6 @@
 seed_everything: 1234
 trainer:
+  max_epochs: 400
   gradient_clip_val: 1.0
   callbacks:
     - class_path: pytorch_lightning.callbacks.ModelCheckpoint
