--- a/config/asr_ja_phone_base.yaml
+++ b/config/asr_ja_phone_base.yaml
@@ -1,5 +1,6 @@
 seed_everything: 1234
 trainer:
+  max_epochs: 100
   gradient_clip_val: 1.0
   callbacks:
     - class_path: pytorch_lightning.callbacks.ModelCheckpoint
@@ -13,10 +14,8 @@ model:
     vocab_size: 44
     audio_size: 64
     encoder_settings:
-      - [512, false, 5, 1, 2, False]
-      - [512, false, 5, 2, 2, False]
-      - [512, false, 5, 1, 2, False]
-      - [512, false, 5, 1, 2, False]
+      - [512, false, 5, 1, 2, false]
+      - [512, false, 5, 2, 2, false]
     decoder_num_layers: 2
     decoder_hidden_size: 512
     learning_rate: 1e-3
@@ -24,9 +23,9 @@ data:
   class_path: voice100.data_modules.AudioTextDataModule
   init_args:
     vocoder: mel
-    dataset: cv_ja
+    dataset: cv_ja,kokoro_large
     language: ja
     sample_rate: 16000
     use_align: false
     use_phone: true
-    batch_size: 256
+    batch_size: 64
