--- a/config/asr_ja_phone_small.yaml
+++ b/config/asr_ja_phone_small.yaml
@@ -1,5 +1,6 @@
 seed_everything: 1234
 trainer:
+  max_epochs: 70
   gradient_clip_val: 1.0
   callbacks:
     - class_path: pytorch_lightning.callbacks.ModelCheckpoint
@@ -22,9 +23,9 @@ data:
   class_path: voice100.data_modules.AudioTextDataModule
   init_args:
     vocoder: mel
-    dataset: cv_ja
+    dataset: cv_ja,kokoro_large
     language: ja
     sample_rate: 16000
     use_align: false
     use_phone: true
-    batch_size: 256
+    batch_size: 128
