--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,20 +12,13 @@ voice100-align-text = "voice100.align_text:cli_main"
 voice100-calc-stat = "voice100.calc_stat:cli_main"
 voice100-cache-dataset = "voice100.cache_dataset:cli_main"
 voice100-prepare-dataset = "voice100.prepare_dataset:cli_main"
-voice100-export-onnx-v1 = "voice100.export_onnx_v1:cli_main"
 voice100-export-onnx = "voice100.export_onnx:cli_main"
-voice100-train-align = "voice100.train_align:cli_main"
-voice100-train-asr = "voice100.train_asr:cli_main"
-voice100-train-ttsalign = "voice100.train_ttsalign:cli_main"
-voice100-train-ttsaudio = "voice100.train_ttsaudio:cli_main"
-voice100-train-ttsaudio-v2 = "voice100.train_ttsaudio_v2:cli_main"
-voice100-train-ttsaudio-mt = "voice100.train_ttsaudio_mt:cli_main"
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
-torch = "^1.12"
-torchaudio = "^0"
-pytorch_lightning = { version = "^1.5", extras = ["extra"] }
+python = ">=3.8"
+torch = "^2.0"
+torchaudio = "^2.0"
+pytorch_lightning = { version = "^2.0", extras = ["extra"] }
 pyworld = "^0.3.2"
 g2p-en = "^2.1.0"
 fugashi = "^1.2.1"
