--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,36 @@
-[tool.poetry]
-name = "voice100"
-version = "1.6.0"
-description = "Voice100 is a small TTS for English and Japanese."
-authors = ["Katsuya Iida <katsuya.iida@gmail.com>"]
-license = "MIT"
-readme = "README.md"
+[build-system]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
 
-[tool.poetry.scripts]
+[project]
+name = "voice100"
+authors = [{name = "Katsuya Iida", email = "katsuya.iida@gmail.com"}]
+readme = "README.md"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+]
+requires-python = ">=3.8"
+dynamic = ["version", "description"]
+
+dependencies = [
+    "torch >=2.1",
+    "torchaudio >=2.1",
+    "pytorch_lightning[extra] >=2.1"
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest >=6.0.0",
+    "flake8 >=6.0.0"
+]
+tts = ["pyworld >=0.3.4"]
+lang-en-phone = ["g2p-en >=2.1.0"]
+lang-ja = ["fugashi >=1.3.0", "unidic-lite >=1.0.8"]
+
+[project.urls]
+Home = "https://github.com/kaiidams/voice100"
+
+[project.scripts]
 voice100 = "voice100.main:cli_main"
 voice100-align-text = "voice100.align_text:cli_main"
 voice100-calc-stat = "voice100.calc_stat:cli_main"
@@ -20,28 +44,3 @@ voice100-train-ttsalign = "voice100.train_ttsalign:cli_main"
 voice100-train-ttsaudio = "voice100.train_ttsaudio:cli_main"
 voice100-train-ttsaudio-v2 = "voice100.train_ttsaudio_v2:cli_main"
 voice100-train-ttsaudio-mt = "voice100.train_ttsaudio_mt:cli_main"
-
-[tool.poetry.dependencies]
-python = "^3.8.1"
-torch = "^1.12"
-torchaudio = "^0"
-pytorch_lightning = { version = "^1.5", extras = ["extra"] }
-pyworld = "^0.3.2"
-g2p-en = "^2.1.0"
-fugashi = "^1.2.1"
-unidic-lite = "^1.0.8"
-
-[tool.poetry.extras]
-tts = ["pyworld"]
-lang-en-phone = ["g2p-en"]
-lang-ja = ["fugashi", "unidic-lite"]
-
-[tool.poetry.group.test]  # This part can be left out
-
-[tool.poetry.group.test.dependencies]
-pytest = "^6.0.0"
-flake8 = "^6.0.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
